zavrseni 7-zakljucak, dodaci, literatura

--- a/literatura.bib
+++ b/literatura.bib
@@ -1,47 +1,55 @@
-@book{dejanovic2021c,
-    author = {Игор Дејановић},
-    title = {Језици специфични за домен},
-    publisher = {Факултет техничких наука, Нови Сад},
-    year = {2021}
+@online{allard2015,
+    author    = {John Allard Jr.},
+    title     = {The Double Pendulum},
+    year      = {2015},
+    month     = {March},
+    day       = {4},
+    url       = {https://www.jhallard.com/blog/double_pendulum.html},
+    urldate   = {2025-10-28},
+    note      = {Blog post describing the physics, equations, and Runge–Kutta integration of the double pendulum system}
 }
 
-@article{dejanovic2017a,
-    title = {TextX: A Python tool for Domain-Specific Languages implementation},
-    author = {Igor Dejanović and Renata Vaderna and Gordana Milosavljević and Željko Vuković},
-    doi = {10.1016/j.knosys.2016.10.023},
-    issn = {0950-7051},
-    journal = {Knowledge-Based Systems},
-    keywords = {Domain-Specific Language; Meta-model; Model; Model-Driven software development; Parser; Python },
-    pages = {1–4},
-    project = {III44010-PP1},
-    publisher = {Elsevier},
-    url = {http://www.sciencedirect.com/science/article/pii/S0950705116304178},
-    volume = {115},
-    year = {2017},
-    kobson = {Computer Science, Artificial Intelligence, 14/132, IF 2017=4.396},
-    rank = {M21}
+@online{hpcwiki2024,
+    author    = {{HPC Wiki}},
+    title     = {Scaling in High Performance Computing},
+    year      = {2024},
+    url       = {https://hpc-wiki.info/hpc/Scaling},
+    urldate   = {2025-10-28},
+    note      = {Online article explaining strong and weak scaling, Amdahl's and Gustafson's laws in parallel computing}
 }
 
-@online{pyflies,
-    author = {Igor Dejanović},
-    title = {A Domain-Specific Language (DSL) for designing experiments in psychology},
-    year = {2021},
-    url = {https://github.com/pyflies/pyflies/},
-    urldate = {2025-08-08}
+@online{wikipedia2025chaos,
+    author    = {{Wikipedia contributors}},
+    title     = {Chaos theory},
+    year      = {2025},
+    url       = {https://en.wikipedia.org/wiki/Chaos_theory},
+    urldate   = {2025-10-28},
+    note      = {Wikipedia, The Free Encyclopedia. Last modified 2025}
 }
 
-@online{cirko,
-    author = {Игор Дејановић},
-    title = {Ћирко - ћирилично-латинични конвертор},
-    year = {2025},
-    url = {https://github.com/igordejanovic/cirko},
-    urldate = {2025-08-08}
+@online{plotters2025docs,
+    author    = {{Plotters Developers}},
+    title     = {Plotters Rust Library Documentation},
+    year      = {2025},
+    url       = {https://docs.rs/plotters/latest/plotters/},
+    urldate   = {2025-10-28},
+    note      = {Online documentation for the Plotters data visualization library in Rust}
 }
 
-@online{oootranslit,
-    author = {Александар Урошевић},
-    title = {ООоТранслит},
-    year = {2012},
-    url = {https://urosevic.net/oootranslit/},
-    urldate = {2025-08-08}
+@online{myphysicslab2025,
+    author    = {Erik Neumann},
+    title     = {Double Pendulum Simulation},
+    year      = {2025},
+    url       = {https://www.myphysicslab.com/pendulum/double-pendulum-en.html},
+    urldate   = {2025-10-28},
+    note      = {Interactive web simulation of the double pendulum on myPhysicsLab.com}
+}
+
+@online{geeksforgeeks2025goroutines,
+    author    = {{GeeksforGeeks Contributors}},
+    title     = {Goroutines and Concurrency in Golang},
+    year      = {2024},
+    url       = {https://www.geeksforgeeks.org/go-language/goroutines-concurrency-in-golang/},
+    urldate   = {2025-10-28},
+    note      = {Tutorial article explaining goroutines and concurrency concepts in the Go programming language}
 }
